# gmail-scholar-summary

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT_PLAN.md  README.md  main.py  pyproject.toml
.github/workflows/: weekly-summary.yml
config/: config.yaml
src/: config.py  gmail_client.py  link_filters.py  main.py  report_generator.py  summarizer.py
src/fetchers/: __init__.py  acm_fetcher.py  base.py  composite_fetcher.py  docling_fetcher.py  html_metadata.py  ieee_fetcher.py  metadata_fetcher.py  simple_html_fetcher.py  url_processors.py
src/llm_providers/: __init__.py  base.py  gemini_provider.py  openai_provider.py
tests/: test_acm_fetcher.py  test_composite_fetcher.py  test_config.py  test_gmail_client.py  test_ieee_fetcher.py  test_link_filters.py  test_live_fetchers.py  test_main_links.py  test_metadata_fetcher.py  test_paper_fetcher.py  test_paper_summarizer.py  test_report_generator.py  test_summarizer.py  test_url_processors.py
